# vibe-cli-sandbox

./: .gitignore  README.md  pyproject.toml
docs/: career-context-summary.md  career-plan-summary.md  cross-repo-sync-2026-05.md  demo-script.md  environment-constraints.md  error-taxonomy.md  eval-spec.md  llm-deploy-summary.md  observability.md  output-schema.md  perf-compare.md  reliability.md  source-index.md  startup-prompt.md
eval/: README.md  cases_v0.json  cases_v0.md  run_cases.py
results/: trace_samples.md
results/traces/: 01_success.ok.json  02_invalid_input_empty.json  03_repo_not_found.json  04_runtime_error_json_out_permission.json  05_invalid_input_whitespace.json
src/vibe_cli_sandbox/: __init__.py  cli.py  models.py  runner.py
src/vibe_cli_sandbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py
