[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-cli-sandbox"
version = "0.1.0"
description = "Vibe Coding-inspired CLI sandbox (mock backend first)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.0",
  "typer>=0.9",
  "rich>=13.0",
]

[project.scripts]
vibe = "vibe_cli_sandbox.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q"